Add parent role on accordion

--- a/pages/talks.html
+++ b/pages/talks.html
@@ -16,37 +16,37 @@ preload: hero-talks.svg
   <div class="row">
     <div class="col-sm-6 mt-5 d-flex flex-column align-items-stretch">
       <div class=" embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/_eGtm66_X9E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe title='Agile in a legacy Environment' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/_eGtm66_X9E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <h3 class="mt-3">Agile in a Legacy Environment</h3>
     </div>
     <div class="col-sm-6 mt-5 d-flex flex-column align-items-stretch">
       <div class=" embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/ObzUL1d58eo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe title='Modernizing Gov IT Through Share in Savings Contracts' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/ObzUL1d58eo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <h3 class="mt-3">Modernizing Gov IT Through Share in Savings Contracts</h3>
     </div>
     <div class="col-sm-6 mt-5 d-flex flex-column align-items-stretch">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/lQREvCGELq8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe title='Modern Agile Procurement' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/lQREvCGELq8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <h3 class="mt-3">Modern Agile Procurement</h3>
     </div>
     <div class="col-sm-6 mt-5 d-flex flex-column align-items-stretch">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/n7aE6k8o_BU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe title='Sean Johnson - Pattern Matching in Clojure' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/n7aE6k8o_BU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <h3 class="mt-3">Sean Johnson - Pattern Matching in Clojure</h3>
     </div>
     <div class="col-sm-6 mt-5 d-flex flex-column align-items-stretch">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/DbatBt_fPug" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe title='Kin Lane talks APIs with Matthew Reinbold and DevExchange' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/DbatBt_fPug" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <h3 class="mt-3">Kin Lane talks APIs with Matthew Reinbold and DevExchange</h3>
     </div>
     <div class="col-sm-6 mt-5 d-flex flex-column align-items-stretch">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kWyYdjWDaXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe title='LoRa Alliance Keynote at IoT Evolution EXPO 2018' class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/kWyYdjWDaXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <h3 class="mt-3">LoRa Alliance Keynote at IoT Evolution EXPO 2018</h3>
     </div>
