Update toolkits page width

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -11,7 +11,7 @@ preload: hero-toolkits.svg
   image = 'hero-toolkits.svg'
 %}
 
-<div class="container container-lg text prose">
+<div class="container maxw-lg text prose">
   <p>
     Here are some of the tools and resources that we use at Skylight to help us and our
     clients deliver better public services. These toolkits are always being iterated on
@@ -21,7 +21,7 @@ preload: hero-toolkits.svg
 
   <div class="row my-4">
     <div class="col-md-6 d-flex align-items-stretch">
-      <div class="toolkit-item p-5">
+      <div class="toolkit-item p-205">
         <a href="/work/toolkits/digital-talent-management/">
           <h2 class="h3">Digital Talent Management Handbook</h2>
         </a>
@@ -30,7 +30,7 @@ preload: hero-toolkits.svg
       </div>
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5 mt-md-0">
-      <div class="toolkit-item p-5">
+      <div class="toolkit-item p-205">
         <a href="/work/toolkits/data-sharing-playbook/">
           <h2 class="h3">Data Sharing Playbook</h2>
         </a>
@@ -39,7 +39,7 @@ preload: hero-toolkits.svg
       </div>
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5">
-      <div class="toolkit-item p-5">
+      <div class="toolkit-item p-205">
         <a href="/work/toolkits/accessibility-guide/">
           <h2 class="h3">Accessibility Guide</h2>
         </a>
@@ -48,7 +48,7 @@ preload: hero-toolkits.svg
       </div>
     </div>
     <div class="col-md-6 d-flex align-items-stretch mt-5">
-      <div class="toolkit-item p-5">
+      <div class="toolkit-item p-205">
         <a href="/work/toolkits/agile-procurement-playbook/">
           <h2 class="h3">Agile Procurement Playbook</h2>
         </a>
