--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -272,7 +272,7 @@ class_2_spots:
       <p>Each course requires a minimum of 25 participants. The run dates are contingent upon meeting this minimum.</p>
       {% endcapture %}
 
-      {% include accordion.html accordion_header = 'Is the course guaranteed to run if I sign-up?' accordion_body = accordion_body accordion_index = '5' %}
+      {% include accordion.html accordion_header = 'Is the course guaranteed to run if I sign up?' accordion_body = accordion_body accordion_index = '5' %}
     </div>
   </div>
 </div>
