--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -282,7 +282,7 @@ class_2_spots:
       <p>Each course requires a minimum of 15 participants. The run dates are contingent upon meeting this minimum. You'll be refunded 100% of the registration cost in the event that we cancel the course.</p>
       {% endcapture %}
 
-      {% include accordion.html accordion_header = 'Is the course guaranteed to run if I sign-up?' accordion_body = accordion_body accordion_index = '9' %}
+      {% include accordion.html accordion_header = 'Is the course guaranteed to run if I sign up?' accordion_body = accordion_body accordion_index = '9' %}
 
       {% capture accordion_body %}
       <ul>
