Fix heading levels across site

--- a/pages/values.html
+++ b/pages/values.html
@@ -20,7 +20,7 @@ preload: hero-values.svg
         <div class="value-col">
           <div class="value-card">
             <div class="value-block">
-              <h3>{{value.title}}</h3>
+              <h2 class="header-display-4 mb-3">{{value.title}}</h2>
               <p>{{value.statement}}</p>
             </div>
           </div>
