update VADM case study

--- a/_projects/va_diffusion_marketplace.html
+++ b/_projects/va_diffusion_marketplace.html
@@ -15,6 +15,8 @@ tags: [service delivery, research & design, software delivery, veterans, healthc
 excerpt: A knowledge management platform for improving how the Veterans Affairs delivers healthcare to veterans through the dissemination of promising clinical and administrative practices.
 project_members:
   - becca-bartola
+  - tomi-obikunle
+  - elisa-lee
   - lesley-evans
   - tom-black
   - aera-hoffman
