Add card for guide to toolkit pg

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -56,6 +56,15 @@ preload: hero-toolkits.svg
         <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Procurement Community of Practice</a></p>
       </div>
     </div>
+      <div class="col-md-6 d-flex align-items-stretch mt-5">
+      <div class="toolkit-item p-205">
+        <a href="/work/toolkits/managing-technical-debt/">
+          <h2 class="h3">Managing Technical Debt Guide</h2>
+        </a>
+        <p class="mt-3">{{ site.data.toolkits.managing_technical_debt.description }}</p>
+        <p class="mb-0">Contact: <a href="mailto:communities@skylight.digital">Engineering Community of Practice</a></p>
+      </div>
+    </div>
   </div>
 
   <p>
