--- a/_projects/ct_ece_reporter.html
+++ b/_projects/ct_ece_reporter.html
@@ -10,7 +10,7 @@ feature_image_description:
 feature_image_shadow:
 order: 3
 display: true
-tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, early childhood, social safety net, healthcare, education, chris given, julia hogan, cailyn hansen, victoria suwardiman, ashley treni, abby raskin, kyle magida, marvo dolor, amelia wellers]
+tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, early childhood, social safety net, healthcare, education, chris given, julia hogan, cailyn hansen, victoria suwardiman, ashley treni, abby raskin, kyle magida, marvo dolor, amelia wellers, olivia lucas, jordan guinn]
 excerpt: A user-friendly data collection tool to get accurate information from early care and education providers about the children in their care in Connecticut.
 project_members:
   - chris-given
@@ -22,6 +22,8 @@ project_members:
   - kyle-magida
   - marvo-dolor
   - amelia-wellers
+  - olivia-lucas
+  - jordan-guinn
 technologies:
   - HTML / CSS
   - JavaScript / React
