--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -10,7 +10,7 @@ feature_image_description:
 feature_image_shadow:
 order: 5
 display: true
-tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, defense, air force, mical nobel, phoebe espiritu, lesley evans, adam weber, nick clyde, mitchell sipus, maya benari]
+tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, defense, air force, mical nobel, phoebe espiritu, lesley evans, adam weber, nick clyde, mitchell sipus, maya benari, kari hodges, eric richards]
 excerpt: A digital platform for transforming how the U.S. Air Force manages personnel protective equipment.
 project_members:
   - mical-nobel
@@ -20,6 +20,8 @@ project_members:
   - nick-clyde
   - mitchell-sipus
   - maya-benari
+  - kara-hodges
+  - eric-richards
 technologies:
   - HTML / CSS / Sass
   - JavaScript
