--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -20,7 +20,7 @@ project_members:
   - nick-clyde
   - mitchell-sipus
   - maya-benari
-  - kara-hodges
+  - kari-hodges
   - eric-richards
 technologies:
   - HTML / CSS / Sass
