add photo; edit about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -136,8 +136,9 @@ preload: hero-about-us.svg
 
           <p>
             Feel free to reach out directly to one of our leaders &mdash;
-            <a href="mailto:chris@skylight.digital">Chris Cairns</a>
-            or <a href="mailto:shashank@skylight.digital">Shashank Khandelwal</a>.
+            <a href="mailto:chris@skylight.digital">Chris Cairns</a>,
+            <a href="mailto:shashank@skylight.digital">Shashank Khandelwal</a>,
+            or <a href="mailto:phoebe@skylight.digital">Phoebe Espiritu</a>.
           </p>
 
           <p>
