--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -10,18 +10,19 @@ feature_image_description:
 feature_image_shadow:
 order: 5
 display: true
-tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, defense, air force, mical nobel, phoebe espiritu, lesley evans, adam weber, nick clyde, mitchell sipus, maya benari, kari hodges, eric richards]
+tags: [service delivery, research & design, product management, software delivery, legacy modernization, devops, cloud & platforms, data & analytics, apis, security & privacy, defense, air force, mical nobel, phoebe espiritu, lesley evans, adam weber, nick clyde, mitchell sipus, maya benari, kari hodges, eric richards, nicole campbell]
 excerpt: A digital platform for transforming how the U.S. Air Force manages personnel protective equipment.
 project_members:
-  - mical-nobel
+  - nicole-campbell
   - phoebe-espiritu
   - lesley-evans
-  - adam-weber
-  - nick-clyde
-  - mitchell-sipus
-  - maya-benari
   - kari-hodges
   - eric-richards
+  - adam-weber
+  - nick-clyde
+  - maya-benari
+  - mical-nobel
+  - mitchell-sipus
 technologies:
   - HTML / CSS / Sass
   - JavaScript
