update contracting page

--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -62,9 +62,7 @@ preload: hero-contracting.svg
   <ul>
     <li>GSA IT Schedule 70 (contract #: 47QTCA18D00D0) &mdash; accessible to all federal, state, and local governments</li>
     <li>SBA-certified <a href="https://www.sba.gov/partners/contracting-officials/contracting-program-administration/hubzone-administration">HUBZone company</a> &mdash; eligible for sole-source contracts</li>
-    <li>U.S. Air Force STTR Phase I, Service Design Accelerator (contract #: FA864920P0634) &mdash; eligible for sole-source contracts and accessible to any federal agency</li>
-    <li>U.S. Air Force SBIR Phase II, GearFit (contract #: FA864919CA079) &mdash; eligible for sole-source contracts and accessible to any federal agency</li>
-    <li>U.S. Air Force SBIR Phase III, Use Modern Digital Delivery Practices and Technologies to Improve Mission Outcomes (contract #: FA877120C0018) &mdash; eligible for sole-source contracts and accessible to any federal agency</li>
+    <li>Multiple SBIR/STTR contract vehicles eligible for sole-source awards and accessible to any federal agency &mdash; <a href="/assets/Skylight-SBIR-STTR-Procurement-Guide.pdf">check out our brief guide</a> on how to leverage these amazing vehicles to engage with us quickly and easily</li>
     <li>California Agile Vendor Pool<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
     <li>DHS Services for Enabling Agile Delivery (SEAD)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
     <li>CMS Enterprise Agile Transformation Services (EATS)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
