update contracting page

--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -36,7 +36,7 @@ preload: hero-contracting.svg
     <li>Service Design</li>
     <li>User Research</li>
     <li>User Experience Design</li>
-    <li>Content Strategy</li>
+    <li>Content Strategy & Design</li>
     <li>Accessibility</li>
     <li>Agile Methods</li>
     <li>Software Development</li>
