case study updates

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -67,7 +67,7 @@ source_code_url:
 
 {% capture challenge %}
   <p>
-    People who work for organizations in the defense, security, safety, and
+    Key personnel who work for organizations in the defense, security, safety, and
     healthcare fields often experience critical issues with ill-fitting gear
     that compromise their job performance, their personal safety, and the safety
     of others. These organizations generally don't have sufficient data and systems
@@ -106,10 +106,10 @@ source_code_url:
   </p>
 
   <p>
-    Given the ambitious scope of this initiative, and the acute problems
+    Given the ambitious scope of this initiative, along with the acute problems
     that female pilots are currently facing, we started by engaging the
     Female Fitment program managers under the Human Systems Division to build
-    an application that would gather actionable and accurate equipment feedback
+    an application that would gather acccurate and actionable equipment feedback
     from aircrew and surface it to a range of stakeholders. With that data,
     these stakeholders could then develop and communicate high-quality insights
     regarding the successes and/or failures of personal protective equipment
