--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -248,7 +248,7 @@ class_2_spots:
 
       {% capture accordion_body %}
       <p>Our default method of administering this course is remote. After you register, you'll be given a Zoom weblink to join the meeting. We recommend that you download the Zoom web-based application prior to joining class.</p>
-      <p>Remove course delivery isn't the only option, however. While we've designed the course to be virtual so that anyone, anywhere can sign up to learn about digital acquisition, we love to administer in-person training, too. If you'd like to schedule an in-person training for your organization, please <a href="mailto:training@skylight.digital">reach out to us</a>.</p>
+      <p>Remote course delivery isn't the only option, however. While we've designed the course to be virtual so that anyone, anywhere can sign up to learn about digital acquisition, we love to administer in-person training, too. If you'd like to schedule an in-person training for your organization, please <a href="mailto:training@skylight.digital">reach out to us</a>.</p>
       {% endcapture %}
 
       {% include accordion.html accordion_header = 'How is this course delivered?' accordion_body = accordion_body accordion_index = '4' %}
