change DITAP registration flow

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -4,6 +4,8 @@ title: "Digital IT Acquisition Professional (DITAP) Training"
 permalink: /work/services/training/ditap/
 redirect_from:
   - /services/ditap/
+  - /services/ditap/apply/
+  - /work/services/training/ditap/apply/
 excerpt: Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course.
 image: /img/ditap_executive/ditap-banner.png
 image_description: Banner of Skylight's Digital IT Acquisition Professional Training course.
@@ -27,7 +29,7 @@ class_2_spots:
           <p class="hero-content text-shadow">Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course. Upon completion, you'll earn the Federal Acquisition Certification in Contracting Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80 Continuous Learning Points.</p>
           <div class="hero-btn-group mt-2">
             <div class="hero-btn-wrapper pr-1">
-              <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="/work/services/training/ditap/apply">Apply now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
+              <a class="btn btn-warning text-dark mr-2 mt-sm-3" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-123043007949">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
             </div>
             <div class="hero-btn-wrapper pl-1">
               <a class="btn btn-outline-light mt-sm-3" href="/assets/Skylight-DITAP-Syllabus.pdf">Read syllabus</a>
@@ -53,7 +55,7 @@ class_2_spots:
             <li><a class="nav-link" href="#faqs">FAQs</a></li>
           </ul>
         </nav>
-        <a class="btn btn-primary-dark font-weight-bold mt-2" href="/work/services/training/ditap/apply">Apply now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
+        <a class="btn btn-primary-dark font-weight-bold mt-2" href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-123043007949">Register now <i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></a>
       </div>
     </div>
 
@@ -188,7 +190,7 @@ class_2_spots:
       </div>
 
       <h2 id="tuition-and-dates">Dates and tuition</h2>
-      <a href="/work/services/training/ditap/apply/?date=1" class="row tuition-card no-gutters mt-4">
+      <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-123043007949" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
           <h3 class="class-heading">November 2, 2020 to May 6, 2021</h3>
           {% if page.class_1_spots %}
@@ -203,7 +205,7 @@ class_2_spots:
             <p><strong>Cost:</strong> $7,500 USD</p>
           </div>
           <p class="mt-2">
-            <strong class="tuition-card-link">Apply now<i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></strong>
+            <strong class="tuition-card-link">Register now<i class="fa fa-chevron-right ml-2" aria-hidden="true"></i></strong>
           </p>
         </div>
       </a>
