--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -198,7 +198,7 @@ class_2_spots:
               <span>{{ page.class_1_spots }} spots left</span>
             </div>
           {% endif %}
-          <p class="tuition-card-note">In-person classroom sessions will be held on Nov 2&ndash;4, Jan 25&ndash;29, Mar 15&ndash;19, and May 3&ndash;6.</p>
+          <p class="tuition-card-note">In-person classroom sessions will be held on Nov 2&ndash;4, Jan 25&ndash;29, Mar 15&ndash;19, and May 3&ndash;6. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.</p>
           <div class="tuition-card-meta mt-3">
             <p><strong>Location:</strong> Online + Washington DC</p>
             <p><strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert Read, and Lara Kohl</p>
