update careers page

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -62,9 +62,8 @@ preload: hero-toolkits.svg
     These toolkits are managed by our Communities of Practice. Communities
     are organized groups within Skylight who are passionate about developing
     and sharing our expertise with the world. We currently have nine communities
-    of practice. These include: Delivery Management, Research & Design,
-    Product, Engineering, Data, Procurement, Transformation, Accessibility, and
-    Internet of Things.
+    of practice. These include: Research & Design, Product & Delivery, Engineering,
+    Data, Procurement, Transformation, Accessibility, and Internet of Things.
   </p>
 
 </div>
