--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -61,7 +61,7 @@ preload: hero-toolkits.svg
   <p>
     These toolkits are managed by our Communities of Practice. Communities
     are organized groups within Skylight who are passionate about developing
-    and sharing our expertise with the world. We currently have nine communities
+    and sharing our expertise with the world. We currently have eight communities
     of practice. These include: Research & Design, Product & Delivery, Engineering,
     Data, Procurement, Transformation, Accessibility, and Internet of Things.
   </p>
