update case study

--- a/_projects/cms_iqies.html
+++ b/_projects/cms_iqies.html
@@ -23,8 +23,8 @@ technologies:
   - Adobe XD
   - Balsamiq
   - InVision
-  - Git / GitHub
   - Amazon Web Services
+  - Git / GitHub
 practices:
   - User research
   - User experience design
@@ -47,9 +47,8 @@ source_code_url:
     web-based version. The current legacy system is used by healthcare providers
     (such as nursing homes) to submit quality-of-care assessment information.
     That information is then used by state agencies and CMS to evaluate and improve
-    the quality of those providers. In support of this modernization effort, we've
-    been engaged as a subcontractor to Ventera and have been providing critical design
-    and technical expertise
+    the quality of those providers. In support of this modernization effort, we engaged
+    as a subcontractor to Ventera and provided critical design and technical expertise.
   </p>
 {% endcapture %}
 
@@ -58,30 +57,30 @@ source_code_url:
     CMS' iQIES initiative is a complex, large-scale modernization effort aimed at
     replacing the existing legacy system. A major challenge with this initiative
     has been the need to maintain operational continuity while at the same time
-    modernizing both the underlying technology stack and the user experience.
+    modernizing both the user experience and the technical architecture.
   </p>
 {% endcapture %}
 
 {% capture solution %}
   <p>
-    As a subcontractor to <a href="https://ventera.com/">Ventera</a>, we've helped support the iQIES
+    As a subcontractor to <a href="https://ventera.com/">Ventera</a>, we helped support the iQIES
     initiative in several key areas, including:
   </p>
 
   <ul>
     <li>
-      Providing design leadership to continually improve how user research, user
-      experience design, and engineering teams engage in the process of
+      Provided design leadership to continually improve how user research, user
+      experience design, and engineering teams engaged in the process of
       user-centered design
     </li>
 
     <li>
-      Establishing a collaborative design platform aimed constantly reinforcing the
+      Established a collaborative design platform aimed at constantly reinforcing the
       principles and practices of user-centered design
     </li>
 
     <li>
-      Engineering the frontend experience of the application
+      Engineered the frontend experience of the application
     </li>
   </ul>
 {% endcapture %}
