--- a/_projects/uscis_everify_modernization.html
+++ b/_projects/uscis_everify_modernization.html
@@ -71,7 +71,7 @@ source_code_url:
     E-Verify system in order to improve the overall user experience. A major
     challenge with this modernization has been the need to maintain and
     integrate with a myriad of legacy systems, while simultaneously
-    building-out and optimizing the new system.
+    building out and optimizing the new system.
   </p>
 {% endcapture %}
 
