update ditap run date

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -192,13 +192,13 @@ class_2_spots:
       <h2 id="tuition-and-dates">Dates and tuition</h2>
       <a href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-tickets-123043007949" class="row tuition-card no-gutters mt-4">
         <div class="col-12">
-          <h3 class="class-heading">November 2, 2020 to May 6, 2021</h3>
+          <h3 class="class-heading">March 2, 2021 to August 19, 2021</h3>
           {% if page.class_1_spots %}
             <div class="class-spots">
               <span>{{ page.class_1_spots }} spots left</span>
             </div>
           {% endif %}
-          <p class="tuition-card-note">In-person classroom sessions will be held on Nov 2&ndash;4, Jan 25&ndash;29, Mar 15&ndash;19, and May 3&ndash;6. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.</p>
+          <p class="tuition-card-note">In-person classroom sessions will be held on Mar 2&ndash;4, May 10&ndash;14, Jun 26 &ndash; Jul 2, and Aug 16&ndash;19. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.</p>
           <div class="tuition-card-meta mt-3">
             <p><strong>Location:</strong> Online + Washington DC</p>
             <p><strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert Read, and Lara Kohl</p>
