update contracting page

--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -60,7 +60,7 @@ preload: hero-contracting.svg
 
   <h2>Contracting pathways and vehicles</h2>
   <ul>
-    <li>GSA IT Schedule 70 (contract #: 47QTCA18D00D0) &mdash; accessible to all federal, state, and local governments</li>
+    <li>GSA Multiple Award Schedule (contract #: 47QTCA18D00D0, SIN #: 54151S) &mdash; accessible to all federal, state, and local governments</li>
     <li>SBA-certified <a href="https://www.sba.gov/partners/contracting-officials/contracting-program-administration/hubzone-administration">HUBZone company</a> &mdash; eligible for sole-source contracts</li>
     <li>Multiple SBIR/STTR contract vehicles eligible for sole-source awards and accessible to any federal agency &mdash; <a href="/assets/Skylight-SBIR-STTR-Procurement-Guide.pdf">check out our brief guide</a> on how to leverage these amazing vehicles to engage with us quickly and easily</li>
     <li>California Agile Vendor Pool<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
