update ditap page

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -198,7 +198,7 @@ class_2_spots:
               <span>{{ page.class_1_spots }} spots left</span>
             </div>
           {% endif %}
-          <p class="tuition-card-note">In-person classroom sessions will be held on Mar 2&ndash;4, May 10&ndash;14, Jun 26 &ndash; Jul 2, and Aug 16&ndash;19. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.</p>
+          <p class="tuition-card-note">In-person classroom sessions will be held on Mar 2&ndash;4, May 11&ndash;13, Jun 29 &ndash; Jul 1, and Aug 17&ndash;19. If COVID-19 continues to present public-health risks, however, these sessions will be conducted virtually.</p>
           <div class="tuition-card-meta mt-3">
             <p><strong>Location:</strong> Online + Washington DC</p>
             <p><strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert Read, and Lara Kohl</p>
@@ -232,9 +232,9 @@ class_2_spots:
 
       {% capture accordion_body %}
       <ul>
-        <li>15 hours of webinars across 6 months.</li>
-        <li>17 full days of mandatory, in-person classroom instruction.</li>
-        <li>Additional 12 hours per week to read articles, participate in online discussions, contribute to group activities, and work on assignments.</li>
+        <li>12 full days of mandatory classroom instruction consisting of three separate, three-day in-person sessions.</li>
+        <li>15 hours of virtual, instructor-led training.</li>
+        <li>12 hours per week of asynchronous, self-paced learning (e.g., reading articles, participating in online discussions, contributing to work activities, and working on assignments).</li>
       </ul>
       {% endcapture %}
 
