--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -99,7 +99,7 @@ source_code_url:
   <p>
     To address this challenge, the U.S. Air Force's Human Systems Division engaged
     us to build a digital platform called GearFit. The current product vision for
-    GearFit encompasses several important capabilties, such as user-driven
+    GearFit encompasses several important capabilities, such as user-driven
     feedback, issues reporting & analytics, catalog management & ordering, and
     training videos. The target population of users includes all aircrew,
     the operational groups who support them, and potentially other military branches.
@@ -109,7 +109,7 @@ source_code_url:
     Given the ambitious scope of this initiative, along with the acute problems
     that female pilots are currently facing, we started by engaging the
     Female Fitment program managers under the Human Systems Division to build
-    an application that would gather acccurate and actionable equipment feedback
+    an application that would gather accurate and actionable equipment feedback
     from aircrew and surface it to a range of stakeholders. With that data,
     these stakeholders could then develop and communicate high-quality insights
     regarding the successes and/or failures of personal protective equipment
