case study edits

--- a/_projects/usaf_gearfit.html
+++ b/_projects/usaf_gearfit.html
@@ -25,10 +25,11 @@ project_members:
   - mitchell-sipus
 technologies:
   - HTML / CSS / Sass
-  - JavaScript
+  - JavaScript / React
   - Polaris Design System
   - U.S. Web Design System
   - Java / Spring Boot
+  - APIs
   - MySQL
   - Docker
   - Amazon Web Services
@@ -44,6 +45,7 @@ practices:
   - Responsive web design
   - Accessibility
   - Agile development
+  - API-first development
   - DevSecOps
   - Containerization
   - Cloud hosting
