case study edits' '

--- a/_projects/uscis_everify_modernization.html
+++ b/_projects/uscis_everify_modernization.html
@@ -77,10 +77,9 @@ source_code_url:
 
 {% capture solution %}
   <p>
-    As a subcontractor to <a href="https://www.excella.com/">Excella</a>, we helped address both the modernization
-    and relaunch efforts, as well as legacy integration and modernization,
-    using modern delivery practices and technologies. Some of our major
-    contributions included:
+    As a subcontractor to <a href="https://www.excella.com/">Excella</a>, we helped address both
+    the modernization and relaunch efforts, as well as legacy integration and modernization,
+    using digital delivery practices. Some of our major contributions included:
   </p>
 
   <ul>
