case study edits

--- a/_projects/cms_iqies.html
+++ b/_projects/cms_iqies.html
@@ -57,7 +57,7 @@ source_code_url:
     CMS' iQIES initiative is a complex, large-scale modernization effort aimed at
     replacing the existing legacy system. A major challenge with this initiative
     has been the need to maintain operational continuity while at the same time
-    modernizing both the user experience and the technical architecture.
+    modernizing the user experience, the technical architecture, and the technology stack.
   </p>
 {% endcapture %}
 
