update services page

--- a/pages/services.html
+++ b/pages/services.html
@@ -113,7 +113,7 @@ preload: hero-services.svg
           <h3>How we've helped others:</h3>
           <ul>
             <li><a href="/work/experience/ct-oec-digital-transformation/">Helped transform how the Connecticut Office of Early Childhood delivers services</a></li>
-            <li>Supported the U.S. Air Force in building a large-scale digital center of enablement</li>
+            <li>Supported the U.S. Air Force in building a large-scale digital solutions center</li>
             <li><a href="/work/experience/tsa-cloud-adoption/">Accelerated the Transportation Security Administration's adoption of the cloud</a></li>
           </ul>
         </div>
