update company details

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,19 +41,11 @@ preload: hero-about-us.svg
           </p>
 
           <p>
-            Our official headquarters is in <a href="https://www.google.com/maps/place/Chapel+Hill,+NC/@35.9209387,-79.109331,12z/data=!3m1!4b1!4m5!3m4!1s0x89acc31c216e7ea7:0x7f03bae00443e4cb!8m2!3d35.9131996!4d-79.0558445">Chapel Hill, North Carolina</a>,
+            Our official headquarters is in sunny <a href="https://goo.gl/maps/3pX7v6YjSmpkwchz5">Sarasota, Florida</a>,
             but we're a distributed and remote-friendly team currently spread across 20 different states.
             Sometimes the nature of our client work calls for closer proximity to their location.
             So far, we've worked with clients located in places like Washington DC, Hartford (Connecticut),
             Montgomery (Alabama), Baltimore (Maryland), and Ottawa (Canada).
-          </p>
-
-          <p>
-            We're also certified by the Small Business Administration (SBA) as a <a href="https://www.sba.gov/contracting/government-contracting-programs/hubzone-program">
-            Historically Underutilized Business Zone (HUBZone)</a> company. This special SBA designation
-            means we're committed to revitalizing local communities through job creation.
-            In turn, we're granted privileged access to federal government contract opportunities,
-            including up to $4M per contract award.
           </p>
         </div>
       </div>
