--- a/_projects/18f_consulting.html
+++ b/_projects/18f_consulting.html
@@ -18,7 +18,7 @@ project_members:
   - robert-read
 technologies:
   - Lever (recruiting software)
-  - G Suite
+  - Google Workspace
   - Trello
   - Slack
   - Mural
