--- a/_projects/digital_acquisition_accelerator.html
+++ b/_projects/digital_acquisition_accelerator.html
@@ -18,7 +18,7 @@ project_members:
   - shashank-khandelwal
 technologies:
   - Instructional media
-  - G Suite
+  - Google Workspace
   - Git / GitHub
   - GitHub Pages
   - Jekyll
