--- a/_projects/digital_transformation_framework.html
+++ b/_projects/digital_transformation_framework.html
@@ -17,7 +17,7 @@ project_members:
   - chris-cairns
   - shashank-khandelwal
 technologies:
-  - G Suite
+  - Google Workspace
   - Git / GitHub
   - GitHub Pages
   - Jekyll
