--- a/_projects/agile_delivery_services_marketplace.html
+++ b/_projects/agile_delivery_services_marketplace.html
@@ -17,7 +17,7 @@ project_members:
   - chris-cairns
   - robert-read
 technologies:
-  - G Suite
+  - Google Workspace
   - Git / GitHub
   - GitHub Pages
   - Jekyll
