--- a/_projects/epa_sdwis_advice.html
+++ b/_projects/epa_sdwis_advice.html
@@ -16,7 +16,7 @@ project_members:
   - josh-dorothy
   - chris-given
 technologies:
-  - G Suite
+  - Google Workspace
 practices:
   - Workshop facilitation
   - Information gathering
