--- a/_projects/va_mobile_product_strategy.html
+++ b/_projects/va_mobile_product_strategy.html
@@ -18,7 +18,7 @@ project_members:
   - chris-cairns
 technologies:
   - Zoom
-  - G Suite
+  - Google Workspace
   - Git / GitHub
 practices:
   - Primary research
