case study edits

--- a/_projects/sba_ascent.html
+++ b/_projects/sba_ascent.html
@@ -15,6 +15,7 @@ excerpt: A learning platform designed to help female entrepreneurs start and gro
 project_members:
   - andrew-wagner
 technologies:
+  - HTML / CSS
   - Brightspot CMS
   - Ruby / Rails
   - JavaScript / React / Redux
