--- a/_projects/usaf_arms.html
+++ b/_projects/usaf_arms.html
@@ -18,7 +18,7 @@ project_members:
   - colin-craig
   - laura-king
 technologies:
-  - HTML5 / CSS3
+  - HTML / CSS
   - JavaScript / Vue.js
   - Tailwind UI
   - Go
