--- a/_projects/usaf_jocas.html
+++ b/_projects/usaf_jocas.html
@@ -18,7 +18,7 @@ project_members:
   - gabriel-ramirez
   - ari-perez
 technologies:
-  - HTML5 / CSS3
+  - HTML / CSS
   - JavaScript / React
   - Carbon Design System
   - Typescript
