--- a/_projects/uscis_everify_modernization.html
+++ b/_projects/uscis_everify_modernization.html
@@ -18,7 +18,7 @@ project_members:
   - nick-bristow
   - jay-danielian
 technologies:
-  - HTML5 / CSS3
+  - HTML / CSS
   - JavaScript / React / Redux
   - Ruby / Rails
   - Groovy
