--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ preload: hero.svg
       <h2 class="hidden-xs-down">We make government <br> work in a digital world</h2>
 
       <p class="hidden-sm-up">
-        Skylight is a consultancy using design, technology, and procurement
+        Skylight is a digital consultancy using design and technology
         to help agencies deliver better public services.
       </p>
 
       <p class="hidden-xs-down">
-        Skylight is a consultancy using design, technology, and <br> procurement
+        Skylight is a digital consultancy using design and <br> technology
         to help agencies deliver better public services.
       </p>
 
