--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ preload: hero.svg
       </p>
 
       <p class="hidden-xs-down">
-        Skylight is a digital consultancy using design and <br> technology
+        Skylight is a digital consultancy using design and technology <br>
         to help agencies deliver better public services.
       </p>
 
